# agentnotary

./: README.md  SUBMISSION.md  app.py  pyproject.toml
examples/: demo.py
src/agentnotary/: __init__.py  keccak.py  merkle.py  notary.py  sign.py
tests/: test_agentnotary.py
